--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec 25 07:35:06 2002  Bala  <bala@cs.wustl.edu>
+
+        * ACE version 5.2.8 released.
+
 Wed Dec 25 06:14:17 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
 
 	* Merry Christmas to all.  May we have peace and justice for all in 2003.
