*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@47827 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec 25 17:47:47 2002  Bala  <bala@cs.wustl.edu>
+
+        * TAO version 1.2.8 released.
+
 Wed Dec 25 06:24:01 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
 
 	* docs/performance.html: Added some tips about how to reduce the size of
