Added Vincent Chau
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@47983 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1647,6 +1647,7 @@ Max F. Bilyk <mbilyk@europe.com>
 Danile White <ygor@comcast.net>
 Andrew Marlow <apm35@student.open.ac.uk>
 Michael F"olsl <michael.foelsl@gmx.net>
+Vincent Chau <Vincent.Chau@fr.thalesgroup.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
