--- a/THANKS
+++ b/THANKS
@@ -8,6 +8,7 @@ Everett Anderson <eea1@cec.wustl.edu>
 Alexander Babu Arulanthu <alex@cs.wustl.edu>
 Shawn Atkins <sma1@cs.wustl.edu>
 Jaiganesh Balasubramanian <jai@doc.ece.uci.edu>
+Krishnakumar Balasubramanian <kitty@cs.wustl.edu>
 Matt Braun <mjb2@cs.wustl.edu>
 Darrell Brunsch <brunsch@uci.edu>
 Dante J. Cannarozzi <djc2@cs.wustl.edu>
