--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 15 18:02:01 2003  Bala  <bala@cs.wustl.edu>
+
+        * ACE version 5.3 released.
+
 Wed Jan 15 10:48:11 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* bin/make_release: Did the following enhancements 
