--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 15 18:02:49 2003  Bala  <bala@cs.wustl.edu>
+
+        * TAO version 1.3 released.
+
 Tue Jan 14 22:11:14 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* tests/Crashed_Callback/client.dsp:
