Michael Soden <soden@ikv.de>
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48141 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1654,6 +1654,7 @@ Igor Pisarenko <Igor.Pisarenko@computershare.com.au>
 Dima Scub <dima_scub@sniip.ru>
 Volodymyr Orlenko <vorlenko@jaalam.com>
 Grigory <grig@plesk.com>
+Michael Soden <soden@ikv.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
