--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,15 +1,15 @@
 Tue Jan 28 14:27:01 2003  Pradeep Gore  <pradeep@oomworks.com>
 
-	* orbsvcs\orbsvcs\Notify\Properties.cpp:
-	  In case no conf. file is specified, the EC will default to reactive concurrency.
- 	  This fixes the problem of the Notify crashing without any
-	  conf. file. Thanks to Dennis Sporcic <dennis@hsa.com.au> and
-	  Frederic Langlet <Frederic.Langlet@alcatel.com> for reporting
-	  this problem.
+	* orbsvcs/orbsvcs/Notify/Properties.cpp:
+	  In case no conf. file is specified, the EC will default to
+	  reactive concurrency.  This fixes the problem of the Notify
+	  crashing without any conf. file. Thanks to Dennis Sporcic
+	  <dennis@hsa.com.au> and Frederic Langlet
+	  <Frederic.Langlet@alcatel.com> for reporting this problem. 
 		
 Mon Jan 27 23:01:43 2003  Frank Hunleth  <frank@hunleth.com>
 
-	* orbsvcs\orbsvcs\PortableGroup\UIPMC_Transport.cpp:  Fixed code
+	* orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp:  Fixed code
 	  that was supposed to fake out a good error return when the call
 	  to send() fails.  This fixes an exception break on WinXP when
 	  the network cable is unplugged and a program makes a MIOP
@@ -25,14 +25,14 @@ Mon Jan 27 19:16:33 2003  Pradeep Gore  <pradeep@oomworks.com>
 	Made the following changes to fix the race related crashes of
 	Notify seen in orbsvcs/tests/Notify/performance-tests/RedGreen -
 
-	* orbsvcs\orbsvcs\Notify\Builder.cpp:
+	* orbsvcsy/orbsvcs/Notify/Builder.cpp:
 	  Added a refcount on each parent object per child object.
 	  This way the parent is always alive when the child is destroyed.
 	  When the child is destroyed, the parent count is decremented.
 	  The ensures a bottom-up destruction of the Notify object tree.
 
-	* orbsvcs\orbsvcs\Notify\Object.cpp:
-	* orbsvcs\orbsvcs\Notify\Object.h:
+	* orbsvcs/orbsvcs/Notify/Object.cpp:
+	* orbsvcs/orbsvcs/Notify/Object.h:
 	  Made the TAO_NS_Object class a TAO_NS_Refcountable. Moved the
 	  <has_shutdown> method to this class from TAO_NS_Object_T.
 	  The <shutdown> method sets the <shutdown_> flag atomically.
@@ -41,41 +41,41 @@ Mon Jan 27 19:16:33 2003  Pradeep Gore  <pradeep@oomworks.com>
 	  method's return value to determine if the shutdown should
 	  proceed in case of multiple calls to shutdown.
 
-	* orbsvcs\orbsvcs\Notify\Object_T.cpp:
-	* orbsvcs\orbsvcs\Notify\Object_T.h:
+	* orbsvcs/orbsvcs/Notify/Object_T.cpp:
+	* orbsvcs/orbsvcs/Notify/Object_T.h:
 	  Decrement the count on this Objects parent in the destructor.
 	  Changed the signature of destroy similar to <shutdown> to avoid
 	  multiple destoy's.
 
-	* orbsvcs\orbsvcs\Notify\Container_T.cpp:
-	* orbsvcs\orbsvcs\Notify\Container_T.h:
+	* orbsvcs/orbsvcs/Notify/Container_T.cpp:
+	* orbsvcs/orbsvcs/Notify/Container_T.h:
 	  The <collection_> owned by the Container is destroyed in the
 	  <shutdown> method now. The releases the reference count on child
 	  objects.
 
-	* orbsvcs\orbsvcs\Notify\EventChannel.cpp:
-	* orbsvcs\orbsvcs\Notify\EventChannelFactory.cpp:
+	* orbsvcs/orbsvcs/Notify/EventChannel.cpp:
+	* orbsvcs/orbsvcs/Notify/EventChannelFactory.cpp:
 	  The <destroy> method checks the return value of base destroy
 	  method before proceeding.
 
-	* orbsvcs\orbsvcs\Notify\Event_Map_Entry_T.cpp:
-	* orbsvcs\orbsvcs\Notify\Event_Map_Entry_T.h:
-	* orbsvcs\orbsvcs\Notify\Event_Map_Entry_T.inl:
+	* orbsvcs/orbsvcs/Notify/Event_Map_Entry_T.cpp:
+	* orbsvcs/orbsvcs/Notify/Event_Map_Entry_T.h:
+	* orbsvcs/orbsvcs/Notify/Event_Map_Entry_T.inl:
 	  Made the Event_Map_Entry a refcounted object.
 	  The <usage_count_> member is incremented when the <find> method
 	  returns a suitable entry.
 	  The caller is responsible for decrementing the count when it no
 	  longer needs the entry.
 
-	* orbsvcs\orbsvcs\Notify\Event_Map_T.cpp:
-	* orbsvcs\orbsvcs\Notify\Event_Map_T.h:
-	* orbsvcs\orbsvcs\Notify\Event_Map_T.inl:
+	* orbsvcs/orbsvcs/Notify/Event_Map_T.cpp:
+	* orbsvcs/orbsvcs/Notify/Event_Map_T.h:
+	* orbsvcs/orbsvcs/Notify/Event_Map_T.inl:
 	  <find> method now returns the entry (from which the collection
 	  can be obtained).
 	  The <remove> method decrements the count on the entry instead of
 	  deleteting it.
 
-	* orbsvcs\orbsvcs\Notify\Method_Request_Lookup.cpp:
+	* orbsvcs/orbsvcs/Notify/Method_Request_Lookup.cpp:
 	  Obtains the correct map entry and uses the collection in that
 	  entry. The map is released when it is done using it.
 	  Note that the map pointer is guaranteed to be valid because the
@@ -83,40 +83,40 @@ Mon Jan 27 19:16:33 2003  Pradeep Gore  <pradeep@oomworks.com>
 	  count on its parent and so on up to the EventChannel. The
 	  EventChannel only destroys the Event_manager in its destructor.
 
-	* orbsvcs\orbsvcs\Notify\Notify_Service.cpp:
-	* orbsvcs\orbsvcs\Notify\Notify_Service.h:
+	* orbsvcs/orbsvcs/Notify/Notify_Service.cpp:
+	* orbsvcs/orbsvcs/Notify/Notify_Service.h:
 	  Added a fake <_decr_refcnt> to satisfy the template requirements
 	  from TAO_NS_Object_T. This will be rectified in future revisions.
 
-	* orbsvcs\orbsvcs\Notify\ProxyConsumer.cpp:
-	* orbsvcs\orbsvcs\Notify\ProxyConsumer.h:
-	* orbsvcs\orbsvcs\Notify\ProxySupplier.cpp:
-	* orbsvcs\orbsvcs\Notify\ProxySupplier.h:
+	* orbsvcs/orbsvcs/Notify/ProxyConsumer.cpp:
+	* orbsvcs/orbsvcs/Notify/ProxyConsumer.h:
+	* orbsvcs/orbsvcs/Notify/ProxySupplier.cpp:
+	* orbsvcs/orbsvcs/Notify/ProxySupplier.h:
 	  Modified the <shutdown> implementation to follow the checks as
 	  described above.
 
-	* orbsvcs\orbsvcs\Notify\Timer.h:
-	* orbsvcs\orbsvcs\Notify\Timer_Reactor.cpp:
-	* orbsvcs\orbsvcs\Notify\Timer_Reactor.h:
+	* orbsvcs/orbsvcs/Notify/Timer.h:
+	* orbsvcs/orbsvcs/Notify/Timer_Reactor.cpp:
+	* orbsvcs/orbsvcs/Notify/Timer_Reactor.h:
 	  Made the Timer a refcounted object.
 
-	* orbsvcs\orbsvcs\Notify\Timer_Queue.cpp:
-	* orbsvcs\orbsvcs\Notify\Timer_Queue.h:
+	* orbsvcs/orbsvcs/Notify/Timer_Queue.cpp:
+	* orbsvcs/orbsvcs/Notify/Timer_Queue.h:
 	  Added an <impl> method to obtain the timer implementation.
 
-	* orbsvcs\orbsvcs\Notify\Worker_Task.h:
+	* orbsvcs/orbsvcs/Notify/Worker_Task.h:
 	  Removed the <init> method which is not required here.
 
-	* orbsvcs\orbsvcs\Notify\Reactive_Task.cpp:
-	* orbsvcs\orbsvcs\Notify\Reactive_Task.h:
+	* orbsvcs/orbsvcs/Notify/Reactive_Task.cpp:
+	* orbsvcs/orbsvcs/Notify/Reactive_Task.h:
 	  Added an <init> method in which the Reactor based timer is
 	  allocated.
 
-	* orbsvcs\orbsvcs\Notify\ThreadPool_Task.cpp:
-	* orbsvcs\orbsvcs\Notify\ThreadPool_Task.h:
+	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.cpp:
+	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.h:
 	  The Timer Queue is allocated in the <init> method.
 
-	* orbsvcs\orbsvcs\Notify\Sequence\SequencePushConsumer.cpp:
+	* orbsvcs/orbsvcs/Notify/Sequence/SequencePushConsumer.cpp:
 	  Because the timer is now refcounted, we must release it on
 	  shutdown.
 
@@ -132,7 +132,7 @@ Mon Jan 27 17:36:51 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
 Mon Jan 27 16:47:31 2003  Frank Hunleth  <frank@hunleth.com>
 
-	* orbsvcs\tests\Miop\McastHello\run_test.pl: Fixed incorrect
+	* orbsvcs/tests/Miop/McastHello/run_test.pl: Fixed incorrect
 	  reference to $SV in error handling code.  Thanks to Craig
 	  Rodrigues for pointing this out.
 
@@ -3111,7 +3111,7 @@ Tue Nov 19 15:16:56 2002  Pradeep Gore  <pradeep@oomworks.com>
           for providing the OCI test example and Irfan for showing how to
           use <_tao_poa_downcast>.
 
-        * orbsvcs\Notify_Service\Notify_Service.dsp: Release executable
+        * orbsvcs/Notify_Service/Notify_Service.dsp: Release executable
           should go in the Release directory.
 
 Tue Nov 19 11:02:00 2002  Pradeep Gore  <pradeep@oomworks.com>
