*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48238 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1658,6 +1658,8 @@ Michael Soden <soden@ikv.de>
 Dennis Sporcic <dennis@hsa.com.au>
 Emmanuel Thevenot Beaufort <emmanuel.thevenot-beaufort@jci.com>
 Denis Parnaland <denis.parnaland@tde.alstom.com>
+Matthias Blankenhaus <matthias@ingrian.com>
+
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
