Fixed e-mail address in ChangeLog entry ... ossama -> johnny
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48250 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,4 +1,4 @@
-Sun Feb  2 13:05:12 2003  Ossama Othman  <ossama@uci.edu>
+Sun Feb  2 13:05:12 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Collocation/Makefile.impl:
         * tests/Collocation/Makefile.stub:
