Added Wolfgang Schroeder
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48253 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1659,6 +1659,7 @@ Dennis Sporcic <dennis@hsa.com.au>
 Emmanuel Thevenot Beaufort <emmanuel.thevenot-beaufort@jci.com>
 Denis Parnaland <denis.parnaland@tde.alstom.com>
 Matthias Blankenhaus <matthias@ingrian.com>
+Wolfgang Schroeder <cpp_kurs@arcor.de>
 
 
 I would particularly like to thank Paul Stephenson, who worked with me
