--- a/THANKS
+++ b/THANKS
@@ -1661,6 +1661,7 @@ Denis Parnaland <denis.parnaland@tde.alstom.com>
 Matthias Blankenhaus <matthias@ingrian.com>
 Wolfgang Schroeder <cpp_kurs@arcor.de>
 Mario Hofmann <Mario.Hofmann@SystemaGmbH.de>
+Bruce MacDonald <brucemac@netcomuk.co.uk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
