*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48333 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Mon Feb 10 12:14:35 2003  Ossama Othman  <ossama@uci.edu>
+Mon Feb 10 12:14:35 2003  Jeffrey Graham <jgraham@titan.com>
 
 	* bin/ace-install:
 
