--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,13 @@
+Tue Feb 11 12:48:12 UTC 2003  Gautam Thaker  <gthaker@atl.lmco.com>
+
+        * utils/catior/catior.cpp:
+        * utils/catior/Makefile:
+          Modified catior to better print Priority Model Policy.
+	  Required changes to Makefile to now link wiht RTCORBA which
+	  should be ok since RT CORBA is built by default. Did not
+	  wish to have two versions of catior pgm, or some conditional
+	  compiles.
+	
 Tue Feb 11 07:11:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/DLL_ORB/client.bor:
