Will Christof <Will.Christof@krones.de>
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48377 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1665,6 +1665,7 @@ Bruce MacDonald <brucemac@netcomuk.co.uk>
 Jeffrey Graham <jgraham@titan.com>
 Otis Nyandoro <o.nyandoro@ee.wits.ac.za>
 Dmitri Belogaj <belogaj@nentec.de>
+Will Christof <Will.Christof@krones.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
