--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb 13 13:32:50 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	* utils/catior/catior.dsp: Fixed the debug and release configurations.
+
 Thu Feb 13 14:21:43 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* utils/catior/catior.cpp: Fixed warnings and errors on various
