--- a/THANKS
+++ b/THANKS
@@ -1666,6 +1666,7 @@ Jeffrey Graham <jgraham@titan.com>
 Otis Nyandoro <o.nyandoro@ee.wits.ac.za>
 Dmitri Belogaj <belogaj@nentec.de>
 Will Christof <Will.Christof@krones.de>
+Ferran Boladeres Salvadó <bds@iis.fhg.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
