--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 18 13:42:48 2003  OCI  <oci@cs.wustl.edu>
+
+        * ACE version 5.3.1 released.
+
 Tue Feb 18 13:09:05  2003  Priyanka Gontl a <gontla_p@ociweb.com>
 
 	* ACE version 5.3.1 released
