--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 18 13:44:34 2003  OCI  <oci@cs.wustl.edu>
+
+        * TAO version 1.3.1 released.
+
 Tue Feb 18 13:09:05  2003  Priyanka Gontl a <gontla_p@ociweb.com>
 
 	* TAO version 1.3.1 released
