--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb 19 08:27:20 2003  Heather Drury  <oci@cs.wustl.edu>
+
+        * TAO version 1.3.1 released.
+
 Mon Feb 17 15:37:47 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* tests/RTCORBA/Persistent_IOR/client.bor: Linked the client with
