*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48469 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -13,6 +13,7 @@ Thu Feb 20 13:05:36 2003  Ossama Othman  <ossama@uci.edu>
 	* tao/DynamicInterface/ExceptionList.h:
 	* tao/DynamicInterface/ExceptionList.inl:
 	* tao/DynamicInterface/Makefile:
+	* tao/DynamicInterface/Makefile.bor:
 	* tao/DynamicInterface/Request.cpp:
 	* tao/DynamicInterface/Request.h:
 	* tao/DynamicInterface/Request.inl:
