--- a/ChangeLog
+++ b/ChangeLog
@@ -19,7 +19,7 @@ Thu Mar  6 10:56:09 2003  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * ace/Makefile.am:
 
-        Adding codeset files to yet another makefile variant.
+          Adding codeset files to yet another makefile variant.
 
 Thu Mar  6 09:58:41 2003  Chad Elliott  <elliott_c@ociweb.com>
 
@@ -57,8 +57,7 @@ Wed Mar  5 07:05:11 2003  Phil Mesnier  <mesnier_p@ociweb.com>
         * ace/ace.icc:
         * ace/ace_dll64.mak:
         * ace/ace_lib64.mak:
-
-        Added codeset registry files to more makefiles.
+	  Added codeset registry files to more makefiles.
 
 Wed Mar  5 06:32:40 2003  Phil Mesnier  <mesnier_p@ociweb.com>
 
@@ -66,13 +65,14 @@ Wed Mar  5 06:32:40 2003  Phil Mesnier  <mesnier_p@ociweb.com>
         * ace/ace_dll.dsp:
         * ace/ace_lib.dsp:
 
-        Added codeset registry files and fixed spelling error in Makefile.bor.
+          Added codeset registry files and fixed spelling error in
+	  Makefile.bor. 
 
 Wed Mar  5 06:10:48 2003  Phil Mesnier  <mesnier_p@ociweb.com>
 
        * ace/Makefile.bor:
 
-       Added codeset registry files to makefile.
+         Added codeset registry files to makefile.
 
 Tue Mar 04 19:58:29 2003  Nanbor Wang  <nanbor@cs.wustl.edu>
 
@@ -113,11 +113,11 @@ Tue Mar  4 13:54:52 2003  Phil Mesnier  <mesnier_p@ociweb.com>
         * ace/Codeset_Registry.h:
         * ace/Codeset_Registry.inl:
 
-        New files added to support the codeset framework. The Codeset Registry
-        is either a wrapper for dce code and character set registry functions,
-        if the system supports them, or these fucntions are emulated. Only the
-        functions necessary to support TAO's Codeset translation framework are
-        emulated.
+          New files added to support the codeset framework. The Codeset
+	  Registry is either a wrapper for dce code and character set
+	  registry functions, if the system supports them, or these
+	  fucntions are emulated. Only the functions necessary to support
+	  TAO's Codeset translation framework are emulated.
 
         * ace/Codeset_Registry_db.cpp:
 
