--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -8,8 +8,8 @@ Fri Mar  7 10:58:32 2003  Ossama Othman  <ossama@uci.edu>
 
         * tests/Codec/test.idl (Foo::Bar::C):
 
-          Changed type of this attribute from "long long" to unsigned long
-          long".  It is better supported/emulated by ACE and TAO on
+          Changed type of this attribute from "long long" to "unsigned
+	  long long".  It is better supported/emulated by ACE and TAO on
           platforms that lack 64 bit integer support (e.g. VxWorks).
 
         * tests/Codec/client.cpp:
