*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48750 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,18 +24,28 @@ Mon Mar 10 13:47:08 CET 2003  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>
 Sun Mar  9 10:17:16 2003  Edan Ayal <edanayal@yahoo.com>
 
         * tests/Future_Set_Test.cpp:
-        * tests/Future_Test.cpp: Added the following fixes:
-          1. In Future_Test.cpp, the printing order should be 'a,b,c,d,e' and currently it is 'a,b,c,e,d'.
-          2. First sleep() replaced with ACE_Thread_Manager::instance ()->wait ()
-          3. The final sleep() is redundant, as the spawned threads are already dead
-          4. Prime_Scheduler::close is called twice - once by the user
-             (asking to close the task) and once by the framework, when
-             the thread exists.  This causes the task_count counter to be negative.
-             renamed the method to 'shutdown'. The required modifications are as follows:
-             4.1 Change method declaration and definition (remove 'virtual' and all the arguments)
-             4.2 Change the call in Method_Request_end::call to ->shutdown instead of ->close
-          5. In the future set test, place different name commands in the
-             name set, just to show that it can be done.
+        * tests/Future_Test.cpp:
+
+          Printing order should be 'a,b,c,d,e' instead of 'a,b,c,e,d'.
+
+          First sleep() replaced with
+	  ACE_Thread_Manager::instance()->wait().
+
+          Final sleep() is redundant, as the spawned threads are already
+	  dead.
+
+          Prime_Scheduler::close() is called twice - once by the user
+	  (asking to close the task) and once by the framework, when the
+	  thread exists.  This causes the task_count counter to be
+	  negative.
+
+	  Renamed the method to 'shutdown'.  Change method declaration and
+	  definition (remove 'virtual' and all the arguments).  Change the
+	  call in Method_Request_end::call to shutdown() instead of
+	  close()
+
+	  In the future set test, place different name commands in the
+	  name set, just to show that it can be done.
 
 Sat Mar  8 12:54:18 2003  Steve Huston  <shuston@riverace.com>
 
