--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -3,7 +3,8 @@ Tue Mar 18 15:31:06 2003  Ossama Othman  <ossama@uci.edu>
 	* orbsvcs/examples/ORT/ObjectReferenceFactory.idl:
 
 	  New file containing this example's concrete
-	  ObjectReferenceFactory valuetype.
+	  ObjectReferenceFactory valuetype.  The example incorrectly
+	  attempt to use an abstract valuetype.
 
 	* orbsvcs/examples/ORT/Gateway_ObjRef_Factory.h:
 
