*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@48885 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -23,7 +23,7 @@ Tue Mar 18 15:31:06 2003  Ossama Othman  <ossama@uci.edu>
 
 	  New file containing this example's concrete
 	  ObjectReferenceFactory valuetype.  The example incorrectly
-	  attempt to use an abstract valuetype.
+	  attempted to use an abstract valuetype.
 
 	* orbsvcs/examples/ORT/Gateway_ObjRef_Factory.h:
 
