--- a/ChangeLog
+++ b/ChangeLog
@@ -2,15 +2,16 @@ Wed Mar 26 16:48:54 CET 2003  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>
 
 	* tests/Unbounded_Set_Test.cpp:
 	
-	Corrected signature of main program and inserted an ACE_START_TEST/
-	ACE_END_TEST.  Thanks to Johnny Willemsen for suggesting this.
+	  Corrected signature of main program and inserted an
+	  ACE_START_TEST/ACE_END_TEST.  Thanks to Johnny Willemsen for
+	  suggesting this. 
 
 Wed Mar 26 11:33:15 CET 2003  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>
 
 	* ace/Unbounded_Set.cpp (ACE_Unbounded_Set<T>::delete_nodes):
 
-	Temporarily commented out the ACE_ASSERT(number_of_iterators_ == 0)
-	until the iterator usage problem is repaired in TAO.
+	  Temporarily commented out the ACE_ASSERT(number_of_iterators_ ==
+	  0) until the iterator usage problem is repaired in TAO.
 
 Tue Mar 25 21:08:04 2003  Phil Mesnier  <mesnier_p@ociweb.com>
 
