Fixed HPUX compile errors in tests/IDL_Test
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@49261 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,9 @@
+Tue Apr  8 16:38:00 2003  Dave Smith  <dts@prismtechnologies.com>
+
+	* tao/Any_T.cpp:
+
+	Fixed compile errors in tests/IDL_Test for HPUX build.
+
 Tue Apr 08 10:39:22 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* tests/AMI_Buffering/client.dsp:
