--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@ Tue Apr  8 13:29:05 2003  Chad Elliott  <elliott_c@ociweb.com>
 
 Tue Apr  8 13:12:25 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
-	* ace/Mon_Max.h: #included config-all.h. This is needed for the
+	* ace/Min_Max.h: #included config-all.h. This is needed for the
 	  header file to be used succesfully. This fixes [BUG 1485  and
 	  thanks to Paul Marquis <pmarquis@pobox.com> for reporting this
 	  problem.
