--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,10 @@
+Wed Apr  9 16:00:23 2003  Dave Smith  <dts@prismtechnologies.com>
+
+	* tao/Any_T.cpp:
+	* orbsvcs/orbsvcs/AV/Endpoint_Strategy_T.cpp:
+
+	Fixed compile problems with HPUX and Windows.
+
 Wed Apr  9 09:40:43 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * tests/Param_Test.server.cpp:
