Removed symbol clash on HPUX
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@49341 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,17 @@
+Fri Apr 11 09:33:41 2003  Dave Smith  <dts@prismtechnologies.com>
+
+	* orbsvcs/test/Notify/lib/Application_Commnad.h
+	* orbsvcs/test/Notify/lib/Command_Factory_T.h
+	* orbsvcs/test/Notify/lib/ConsumerAdmin_Command.h
+	* orbsvcs/test/Notify/lib/EventChannel_Command.h
+	* orbsvcs/test/Notify/lib/Filter_Command.h
+	* orbsvcs/test/Notify/lib/Periodic_Consumer_Command.h
+	* orbsvcs/test/Notify/lib/Periodic_Supplier_Command.h
+	* orbsvcs/test/Notify/lib/SupplierAdmin_Command.h
+	  Removed clash with symbol defined in
+	  /usr/include/machine/cpu.h on HPUX.
+
+
 Thu Apr 10 07:06:07 2003 Pradeep Gore <pradeep@oomworks.com>
 
 	* orbsvcs/tests/Notify/RT_lib/Makefile:
