Removed clash with symbol in cpu.h
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@49379 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-14    <dts@axwell>
+
+	* orbsvcs/tests/Notify/RT_lib/RT_POA_Command.h
+	  Removed clash with symbol defined in
+	  /usr/include/machine/cpu.h on HPUX.
+
 Sun Apr 13 13:25:11 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* tao/IIOP_Profile.h:
