Replaced ACE_NEW_RETURN call with its expansion on HPUX11
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@49382 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,9 @@
+Mon Apr 14 11:52:30 2003  Dave Smith  <dts@prismtechnologies.com>
+
+	* orbsvcs/PSS/PSDL_Datastore.cpp:
+	  For HPUX11, replaced the call to the ACE_NEW_RETURN macro with
+	  its expansion, as the call seems to confuse the compiler 
+
 2003-04-14    <dts@axwell>
 
 	* orbsvcs/tests/Notify/RT_lib/RT_POA_Command.h
