*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@49444 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -6,7 +6,10 @@ Wed Apr 16 00:18:08 2003  Ossama Othman  <ossama@uci.edu>
 	  Uninlined this method.  There wasn't much point in inlining it
 	  since it is a virtual method.
 
-	* tao/Any.cpp:
+	* tao/Any.cpp (create_empty):
+
+	  Marked constant initializer variables as "const".
+
 	* tao/Any_T.cpp:
 
 	  Nuked trailing whitespace.
