*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@49449 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -47,6 +47,9 @@ Wed Apr 16 00:18:08 2003  Ossama Othman  <ossama@uci.edu>
 	  Forward declare "ACE_Allocator" class.  Necessitated by above
 	  change.
 
+	  Uninlined another CORBA::SystemException constructor.  This
+	  should help reduce TAO's footprint.
+
 	* tao/GIOP_Message_Generator_Parser.h:
 	* tao/Utils/Auto_Functor.h:
 
