Fixed trailing-whitespaces and added colons after filenames.
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@49589 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,9 +3,9 @@ Tue Apr 22 21:45:00 UTC 2003  Gautam Thaker  <gthaker@atl.lmco.com>
         Please direct all immediate build issues to jcohen@atl.lmco.com
         if problems occur as a result of this check in.  Thank you.
 
-        * tests/Makefile
-        * tests/run_test.lst
-        * tests/run_tests.bat
+        * tests/Makefile:
+        * tests/run_test.lst:
+        * tests/run_tests.bat:
 
         Reconnected Multihomed_INET_Addr_Test to Makefile and scripts.
 
@@ -14,15 +14,15 @@ Tue Apr 22 21:20:00 UTC 2003  Gautam Thaker  <gthaker@atl.lmco.com>
         Please direct all immediate build issues to jcohen@atl.lmco.com
         if problems occur as a result of this check in.  Thank you.
 
-        * performance-tests/SCTP/README
-        * performance-tests/SCTP/README.SCTP_in_ACE
-        * performance-tests/SCTP/run_spectrum.pl
-        * performance-tests/SCTP/SOCK_SEQPACK_wrapper_facade.jpg
+        * performance-tests/SCTP/README:
+        * performance-tests/SCTP/README.SCTP_in_ACE:
+        * performance-tests/SCTP/run_spectrum.pl:
+        * performance-tests/SCTP/SOCK_SEQPACK_wrapper_facade.jpg:
 
         Added jpg with class diagram.
         Augmented READMEs with additional clarifications.
-        
-        * performance-tests/SCTP/SCTP.dsw
+
+        * performance-tests/SCTP/SCTP.dsw:
 
         Removed SCTP.dsw for time being -- will be adding dsw and dsp
         files as Windows conformability can be properly verified.
