--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Nov 10 22:30:14 2003  Kobi Cohen-Arazi  <kobi@mivzak.com>
+
+	* ace/TSS_T.cpp: 
+	Fix ts_get and ts_object functions to check ts_init() return value, and
+	return 0 when ts_init failed.
+
 Mon Nov 10 20:15:46 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * ace/SV_Message_Queue.i:
