--- a/THANKS
+++ b/THANKS
@@ -1772,6 +1772,7 @@ Edward R. Mulholland  <emulholl@atl.lmco.com>
 Brian Buesker <bbuesker@qualcomm.com>
 Vladimir Naylov <vladimir@monosphere.com>
 David Faure <faure@kde.org>
+Ted Mules <ned@technisyst.com.au>
  
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
