Mike Hepburn <mike@anvil.com>
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@53536 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/THANKS
+++ b/THANKS
@@ -1773,6 +1773,7 @@ Brian Buesker <bbuesker@qualcomm.com>
 Vladimir Naylov <vladimir@monosphere.com>
 David Faure <faure@kde.org>
 Ted Mules <ned@technisyst.com.au>
+Mike Hepburn <mike@anvil.com>
  
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
