*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@53589 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -1,3 +1,9 @@
+Wed Nov 12  5:01:00 2003  George Edwards <g.edwards@vanderbilt.edu>
+
+        * tests/Portable_Interceptors/Bug_1559/interceptors.cpp:
+
+          Added check for "is_a" calls in client interceptors.
+
 Wed Nov 12 16:55:00 2003  Justin Michel  <michel_j@ociweb.com>
 
         * docs/tutorials/Quoter/AMI/Quoter_AMI.mpc:
